@@ -1,7 +1,13 @@
 03 Sep 2008 - trunk
 -------------------
 
- * Integrate mlogc source.
+ * Added ctl:requestBodyBuffering=on|off which, when enabled, will force
+   the request body to be buffered and allow REQUEST_BODY to be inspected.
+   Previously the REQUEST_BODY target was only populated if the request body
+   was a parsable type (application/x-www-form-urlencoded or
+   multipart/form-data) or was forced to be parsed via ctl:requestBodyProcessor.
+
+ * Integrated mlogc source.
 
  * Fixed logging the hostname in the error_log which was logging the
    request hostname instead of the Apache resolved hostname.
